#include autotune/searchalgorithms/activeharmony/src/Makefile.am
include autotune/searchalgorithms/exhaustive/src/Makefile.am
include autotune/searchalgorithms/exhaustive_atp/src/Makefile.am
include autotune/searchalgorithms/gde3/src/Makefile.am
include autotune/searchalgorithms/individual/src/Makefile.am
include autotune/searchalgorithms/individual_atp/src/Makefile.am
include autotune/searchalgorithms/load/src/Makefile.am
include autotune/searchalgorithms/random/src/Makefile.am
include autotune/searchalgorithms/skeleton/src/Makefile.am
