TESTS += test_readParamSpecFile
check_PROGRAMS += test_readParamSpecFile

test_readParamSpecFile_CXXFLAGS = ${autotune_test_base_cxxflags}

test_readParamSpecFile_SOURCES = test/autotune/services/ReadParamSpecFile.cc
test_readParamSpecFile_LDADD = $(autotune_test_base_ldadd)
test_readParamSpecFile_DEPENDENCIES = $(autotune_test_base_dependencies)
